# fint

./: LICENSE  README.md  hello.py  pyproject.toml  pytest.ini
fint/indicators/: config.py  indicators.py  io.py  registry.py
fint/indicators/backends/: numba_impl.py  numpy_impl.py  talib_impl.py
tests/: test_indicators.py  test_numba_impl.py  test_numpy_impl.py  test_talib_impl.py
