[project]
name = "fint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "ta-lib>=0.6.6",
]

[dependency-groups]
dev = [
    "fint",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-xdist>=3.8.0",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
fint = { workspace = true }

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
